deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ui
---
apiVersion: v1
kind: Service
metadata:
  name: ui-svc
  namespace: ui
spec:
  ports:
    - port: 80
  selector:
    app: ui
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-proxy  # 在 ui 命名空间中创建的代理服务
  namespace: ui
spec:
  type: ExternalName
  externalName: gateway-svc.gateway.svc.cluster.local  # 目标服务的完整域名
  ports:
    - port: 16001     
      targetPort: 16001
---
apiVersion: v1
kind: Service
metadata:
  name: behaviour-proxy  # 在 ui 命名空间中创建的代理服务
  namespace: ui
spec:
  type: ExternalName
  externalName: behaviour-svc.behaviour.svc.cluster.local  # 目标服务的完整域名
  ports:
    - port: 9090     
      targetPort: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress-api
  namespace: ui
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: "aidighub.com"
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway-proxy
                port:
                  number: 16001
  tls:
    - hosts:
        - "aidighub.com"
      secretName: ui-tls-secret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: ui
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: ""
spec:
  ingressClassName: nginx
  rules:
    - host: "aidighub.com"
      http:
        paths:
          - path: /batch 
            pathType: Prefix
            backend:
              service:
                name: behaviour-proxy
                port:
                  number: 9090
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-svc
                port:
                  number: 80
  tls:
    - hosts:
        - "aidighub.com"
      secretName: ui-tls-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: ui
spec:
  replicas: 1  # 副本数，根据需要调整
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: registry.cn-shenzhen.aliyuncs.com/vk-25/vast-knowledge-ui:${IMAGE_TAG}  # 使用适合的版本
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/log/nginx
              name: log-volume
      volumes:
        - name: log-volume
          hostPath:
            path: /mnt/data/logs/ui
            type: DirectoryOrCreate
