deply.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ui
---
apiVersion: v1
kind: Service
metadata:
  name: ui-svc
  namespace: ui
spec:
  ports:
    - port: 80
  selector:
    app: ui
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: ui
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # 强制使用 HTTPS
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - host: "aidighub.com"  # 设置外部域名
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-svc  # 指向你的 Service 名称
                port:
                  number: 80  # 目标服务的端口
  tls:
    - hosts:
        - "aidighub.com"  # 设置 TLS 证书的域名
      secretName: ui-tls-secret  # 这里是你的 TLS 证书的 Secret 名称
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: ui
spec:
  replicas: 1  # 副本数，根据需要调整
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: registry.cn-shenzhen.aliyuncs.com/vk-25/vk-dev-ui:${IMAGE_TAG}  # 使用适合的版本
          ports:
            - containerPort: 80
